# aoc_2022

./: Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs
