[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"
default-run = "greeting"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
slotmap = { version = "1.0" }
smallvec = { version = "1.10",  features = ["const_generics"] }
smallstr = { version = "0.3" }
